# bill-management

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cc
src/common/: CMakeLists.txt  models.h
src/data/: AnnotationRepositoryImpl.cc  AnnotationRepositoryImpl.h  BillRepositoryImpl.cc  BillRepositoryImpl.h  CMakeLists.txt  DatabaseORM.cc  DatabaseORM.h  EventRepositoryImpl.cc  EventRepositoryImpl.h  UserRepositoryImpl.cc  UserRepositoryImpl.h  irepositories.h
src/gui/: CMakeLists.txt
src/gui/cores/: App.cc  App.h  CMakeLists.txt  Router.cc  Router.h  Session.cc  Session.h
src/gui/screens/: CMakeLists.txt  LoginScreen.cc  LoginScreen.h  RegisterScreen.cc  RegisterScreen.h  VisitScreen.cc  VisitScreen.h
src/service/: AuthService.h
src/services/: AuthService.cc  AuthService.h  BillService.cc  BillService.h  CMakeLists.txt  EventService.cc  EventService.h  StatisticsService.cc  StatisticsService.h  UserService.cc  UserService.h
tests/: CMakeLists.txt  auth_service_test.cc  bill_service_annotate_test.cc  bill_service_test.cc  statistics_service_test.cc  user_service_test.cc
tests/repositories_tests/: CMakeLists.txt  DatabaseTestBase.h  annotation_repository_test.cc  bill_repository_test.cc  event_repository_test.cc  user_repository_test.cc
tests/services_tests/: bill_service_test.cc  event_service_test.cc
